--- a/1yy/web/app/views/layout.html
+++ b/1yy/web/app/views/layout.html
@@ -13,9 +13,7 @@
     <meta name="full-screen" content="yes">
     <meta name="layoutmode" content="standard" />
     <link rel="stylesheet" href="{{asset "css/main.min.css"}}"/>
-    <script type="text/javascript" src="{{asset "js/zepto.min.js"}}"></script>
-    <script type="text/javascript" src="{{asset "js/iscroll.min.js"}}"></script>
-    <script type="text/javascript" src="{{asset "js/main.min.js"}}"></script>
+    <script type="text/javascript" src="{{asset "js/all.min.js"}}"></script>
   </head>
   <body>
 	{{yield}}
