--- a/1yy/web/app/views/index.html
+++ b/1yy/web/app/views/index.html
@@ -1,199 +1,76 @@
-<header class="list-head">
-  <a class="back" href="/">首页</a>
-  <div class="list-type-cnt">
-    <div class="list-type">
-      <a href="/workers" class="active">推拿师</a>
-      <a href="/stores">推拿店</a>
+<header class="index-head">
+  <a class="icon me" href="/home"></a>
+  <div class="channel">
+    <div class="wrap">
+      <a href="/hot" class="active">热点</a>
+      <a href="/best">爆点</a>
+      <a href="/top">排行</a>
     </div>
   </div>
-  <a class="city" href="#">杭州</a>
+  <a class="icon search" href="/search"></a>
 </header>
-<nav class="list-nav">
-  <div class="cat fix">
-      <a href="javascript:void(0)" class="item">全部价格<i class="drop"></i></a>
-      <a href="javascript:void(0)" class="item">全部区域<i class="drop"></i></a>
-      <a href="javascript:void(0)" class="item">综合排序<i class="drop"></i></a>
+<section class="slider" id="slider">
+  <div class="wrap">
+    <div class="item"><img alt="11" src="img/2.jpg"/></div>
+    <div class="item"><img alt="12" src="img/1.jpg"/></div>
+    <div class="item"><img alt="13" src="img/3.jpg"/></div>
+    <div class="item"><img alt="14" src="img/4.jpg"/></div>
   </div>
-  <section class="selector hide">
-    <p class="item active">全部价格</p>
-    <p class="item">300-400元</p>
-    <p class="item">200-300元</p>
-    <p class="item">100-200元</p>
-    <p class="item">50-100元</p>
-  </section>
-  <section class="selector hide">
-    <div>
-      <p class="item active">全部区域</p>
-      <p class="item">上城区</p>
-      <p class="item">下城区</p>
-      <p class="item">拱墅区</p>
-      <p class="item">江干区</p>
-      <p class="item">西湖区</p>
-      <p class="item">滨江区</p>
-      <p class="item">临安</p>
-      <p class="item">富阳</p>
-      <p class="item">萧山区</p>
-      <p class="item">余杭区</p>
-      <p class="item">淳安县</p>
-      <p class="item">建德市</p>
-    </div>
-  </section>
-  <section class="selector hide">
-    <p class="item active">综合排序</p>
-    <p class="item">按评价</p>
-    <p class="item">按经验</p>
-    <p class="item">按服务数</p>
-  </section>
-</nav>
-<ul class="search-list">
-  <li>
-    <a class="item fix" href="/worker/18615887">
-      <div class="pic">
-          <img src="{{asset "img/worker.jpg"}}">
-      </div>
-      <div class="content">
-        <div class="name">
-          <h3 class="workername">小盆</h3>
-        </div>
-        <div class="detail">
-          <p>店名: 苑苑文三路店</p>
-          <p>评价: <span class="star star-50"></span></p>
-          <p>经验: 专业推拿二十年</p>
-          <p>价格: ￥50~￥300</p>
-          <p>距离: 1500m</p>
-        </div>
-      </div>
+  <div class="points">
+    <ul>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </div>
+</section>
+<section class="channels">
+  <div class="line">
+    <a class="item movie">
+      <div class="icon"></div>
+      <div class="txt">电影</div>
     </a>
-  </li>
-  <li>
-      <a class="item fix" href="/worker/18615887">
-        <div class="pic">
-            <img src="{{asset "img/worker.jpg"}}">
-        </div>
-        <div class="content">
-          <div class="name">
-            <h3 class="workername">小盆</h3>
-          </div>
-          <div class="detail">
-            <p>店名: 苑苑文三路店</p>
-            <p>评价: <span class="star star-45"></span></p>
-            <p>价格: ￥50~￥300</p>
-            <p>距离: 1500m</p>
-          </div>
-        </div>
-      </a>
-  </li>
-  <li>
-      <a class="item fix" href="/worker/18615887">
-        <div class="pic">
-            <img src="{{asset "img/worker.jpg"}}">
-        </div>
-        <div class="content">
-          <div class="name">
-            <h3 class="workername">小盆</h3>
-          </div>
-          <div class="detail">
-            <p>店名: 苑苑文三路店</p>
-            <p>评价: <span class="star star-40"></span></p>
-            <p>价格: ￥50~￥300</p>
-            <p>距离: 1500m</p>
-          </div>
-        </div>
-      </a>
-  </li>
-  <li>
-      <a class="item fix" href="/worker/18615887">
-        <div class="pic">
-            <img src="{{asset "img/worker.jpg"}}">
-        </div>
-        <div class="content">
-          <div class="name">
-            <h3 class="workername">小盆</h3>
-          </div>
-          <div class="detail">
-            <p>店名: 苑苑文三路店</p>
-            <p>评价: <span class="star star-35"></span></p>
-            <p>价格: ￥50~￥300</p>
-            <p>距离: 1500m</p>
-          </div>
-        </div>
-      </a>
-  </li>
-  <li>
-      <a class="item fix" href="/worker/18615887">
-        <div class="pic">
-            <img src="{{asset "img/worker.jpg"}}">
-        </div>
-        <div class="content">
-          <div class="name">
-            <h3 class="workername">小盆</h3>
-          </div>
-          <div class="detail">
-            <p>店名: 苑苑文三路店</p>
-            <p>评价: <span class="star star-30"></span></p>
-            <p>价格: ￥50~￥300</p>
-            <p>距离: 1500m</p>
-          </div>
-        </div>
-      </a>
-  </li>
-  <li>
-      <a class="item fix" href="/worker/18615887">
-        <div class="pic">
-            <img src="{{asset "img/worker.jpg"}}">
-        </div>
-        <div class="content">
-          <div class="name">
-            <h3 class="workername">小盆</h3>
-          </div>
-          <div class="detail">
-            <p>店名: 苑苑文三路店</p>
-            <p>评价: <span class="star star-20"></span></p>
-            <p>价格: ￥50~￥300</p>
-            <p>距离: 1500m</p>
-          </div>
-        </div>
-      </a>
-  </li>
-  <li>
-      <a class="item fix" href="/worker/18615887">
-        <div class="pic">
-            <img src="{{asset "img/worker.jpg"}}">
-        </div>
-        <div class="content">
-          <div class="name">
-            <h3 class="workername">小盆</h3>
-          </div>
-          <div class="detail">
-            <p>店名: 苑苑文三路店</p>
-            <p>评价: <span class="star star-10"></span></p>
-            <p>价格: ￥50~￥300</p>
-            <p>距离: 1500m</p>
-          </div>
-        </div>
-      </a>
-  </li>
-  <li>
-      <a class="item fix" href="/worker/18615887">
-        <div class="pic">
-            <img src="{{asset "img/worker.jpg"}}">
-        </div>
-        <div class="content">
-          <div class="name">
-            <h3 class="workername">小盆</h3>
-          </div>
-          <div class="detail">
-            <p>店名: 苑苑文三路店</p>
-            <p>评价: <span class="star star-0"></span></p>
-            <p>价格: ￥50~￥300</p>
-            <p>距离: 1500m</p>
-          </div>
-        </div>
-      </a>
-  </li>
-</ul>
+    <a class="item tv">
+      <div class="icon"></div>
+      <div class="txt">电视剧</div>
+    </a>
+    <a class="item variety">
+      <div class="icon"></div>
+      <div class="txt">综艺</div>
+    </a>
+    <a class="item anime">
+      <div class="icon"></div>
+      <div class="txt">动漫</div>
+    </a>
+  </div>
+  <div class="line">
+    <a class="item game">
+      <div class="icon"></div>
+      <div class="txt">游戏</div>
+    </a>
+    <a class="item ticket">
+      <div class="icon"></div>
+      <div class="txt">电影票</div>
+    </a>
+    <a class="item documentary">
+      <div class="icon"></div>
+      <div class="txt">纪录片</div>
+    </a>
+    <a class="item all">
+      <div class="icon"></div>
+      <div class="txt">全部</div>
+    </a>
+  </div>
+</section>
+<section class="mine">
+  <a href="#">播放历史</a>
+  <a href="#">我的离线</a>
+  <a href="#">我的收藏</a>
+</section>
 <script type="text/javascript">
-$(function(){
-  $.InitNav();
-});
+  var slider = $('#slider').Slider();
+  slider.on('click', function(e, item){
+    console.log(item);
+  });
 </script>
