--- a/1yy/web/app/views/test.html
+++ b/1yy/web/app/views/test.html
@@ -1,52 +1,41 @@
-<style>
-    *{padding:0px; margin:0px;}
-    .touchBox{
-        white-space:nowrap;
-        overflow:hidden;
-    }
-    .items{
-        display:inline-block;
-        white-space:nowrap;
-        overflow:hidden;
-    }
-    .item{
-        display:inline-block;
-        white-space:nowrap;
-    }
-</style>
-<div style="overflow:hidden;" id="wrap">
-    <div class="touchBox" id="slider">
-      <div class="items">      
-          <div class="item"><img alt="14" src="img/4.jpg"/></div>
-          <div class="item"><img alt="11" src="img/1.jpg"/></div>
-          <div class="item"><img alt="12" src="img/2.jpg"/></div>
-          <div class="item"><img alt="13" src="img/3.jpg"/></div>
-          <div class="item"><img alt="14" src="img/4.jpg"/></div>
-          <div class="item"><img alt="11" src="img/1.jpg"/></div>
-      </div>
+<div id="slider">
+  <div class="wrap">
+    <div class="item"><img alt="11" src="img/1.jpg"/></div>
+    <div class="item"><img alt="12" src="img/2.jpg"/></div>
+    <div class="item"><img alt="13" src="img/3.jpg"/></div>
+    <div class="item"><img alt="14" src="img/4.jpg"/></div>
+  </div>
+  <div class="points">
+    <ul>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
   </div>
 </div>
 <div id="picNo" style="font-size:24px;color:#fff;position:absolute;right:20px;margin-top:-30px;"></div>
 
 <div id="msg"></div>
 <script>
-/*去空格和换行(代码中的空格和换行会在浏览器解析时，解析成一个空格，造成位置运算有偏差)*/
+var slider = $('#slider').Slider();
+/*去空格和换行(代码中的空格和换行会在浏览器解析时，解析成一个空格，造成位置运算有偏差)* /
 var hm = $("#slider").html();
 var b = hm.replace(/\n|\r/g,"").replace(/>\s*</g,'><').replace(/\s*</g,"<");
 $("#slider").html( b);
 
-/* 设置每个图片的宽度 */
+/* 设置每个图片的宽度 * /
 var img_w =  $("#wrap").width();
 $(".item img").width( img_w + "px" );
 
-var pic_num = $(".items .item").length -2;                        /* 每组图片的数量 */
-$("#slider").css("margin-left", -img_w+"px");    /* 默认显示中间那一组的第一个图片 */
+var pic_num = $(".items .item").length -2;                        /* 每组图片的数量 * /
+$("#slider").css("margin-left", -img_w+"px");    /* 默认显示中间那一组的第一个图片 * /
 $("#msg").text("pic.width:" + img_w);
 
 //触摸部分
 var touch = {};
-var scrollSupressionThreshold = 5;        /* 触发touchmove的敏感度 */
-var verticalDistanceThreshold = 60;        /* swipe的触发水平方向move必须大于这个距离 */
+var scrollSupressionThreshold = 5;        /* 触发touchmove的敏感度 * /
+var verticalDistanceThreshold = 60;        /* swipe的触发水平方向move必须大于这个距离 * /
 
 // add touch start listener
 var canvas = document.getElementById("slider");
@@ -57,13 +46,13 @@ canvas.addEventListener("touchcancel", touchCancel, false);
 
 function touchStart(event){
     var tc = event.touches[0];
-    touch.marginLeft = $("#slider").css("margin-left");        /* 最原始的坐标值 */
+    touch.marginLeft = $("#slider").css("margin-left");        /* 最原始的坐标值 * /
 
     touch.x = tc.pageX;
 
     touch.x1 = tc.pageX;
 
-    /* 清除定时 */
+    /* 清除定时 * /
     clearInterval(timer);
 }
 function touchMove(event){
@@ -81,23 +70,23 @@ function touchMove(event){
     }
 }
 function touchEnd(event){
-    var movePos = touch.x2-touch.x;        /* 每次移动的距离 */
+    var movePos = touch.x2-touch.x;        /* 每次移动的距离 * /
 
-    /* 判断是否换图片 */
+    /* 判断是否换图片 * /
     if( Math.abs(movePos) > verticalDistanceThreshold){
-        /* 判断左移一张还是右移一张 */
+        /* 判断左移一张还是右移一张 * /
         var c = 1;
         if(movePos<0){
             c = -1;
         }
 
-        var m_left = parseInt(touch.marginLeft) + c*img_w;    /* 本次要移动到的位置 */
+        var m_left = parseInt(touch.marginLeft) + c*img_w;    /* 本次要移动到的位置 * /
 
-        /* 动画切换图片 */
+        /* 动画切换图片 * /
         aninateChangePic(m_left, 100);
 
     }else{
-        /* 移动的距离不够，让图片还原到移动前的位置 */
+        /* 移动的距离不够，让图片还原到移动前的位置 * /
         $("#slider").animate( {"margin-left":touch.marginLeft},200, 'ease', function(){ showPicNo(); } );
 
         $("#msg").text( "reset  "  + touch.x);
@@ -105,7 +94,7 @@ function touchEnd(event){
 
     touch = {};
 
-    /* 重新启动定时 */
+    /* 重新启动定时 * /
     //setTimer();
 }
 
@@ -113,9 +102,9 @@ function touchCancel(event){
     touch = {};
 }
 
-/* 显示当前是第几张图 */
+/* 显示当前是第几张图 * /
 function showPicNo(){
-    /* 得到当前是第几张图 */
+    /* 得到当前是第几张图 * /
     var a = $("#slider").css("margin-left");
     var b = Math.abs(parseInt(a));
     var seq = parseInt(b/img_w) % (pic_num+1);
@@ -123,22 +112,22 @@ function showPicNo(){
     $("#picNo").text(seq + "/" + pic_num);
 }
 
-/* 定时换图 */
+/* 定时换图 * /
 function changePicTimer(){
     var a = $("#slider").css("margin-left");
-    var m_left = parseInt(a) - img_w;    /* 本次要移动到的位置 */
+    var m_left = parseInt(a) - img_w;    /* 本次要移动到的位置 * /
 
-    /* 动画切换图片 */
+    /* 动画切换图片 * /
     aninateChangePic(m_left, 400);
 
 }
 
-/* 动画切换图片  */
+/* 动画切换图片  * /
 function aninateChangePic(m_left, timeout){
-    /* 动画移动 */
+    /* 动画移动 * /
     $("#slider").animate( {"margin-left": m_left + "px"}, timeout, 'ease', function(){
 
-        /* 处理循环的问题(此处是为了处理无限左移或无限右移的问题) */
+        /* 处理循环的问题(此处是为了处理无限左移或无限右移的问题) * /
         if(m_left==0){
           $("#slider").css("margin-left", -img_w*(pic_num)+"px");
         }
@@ -150,7 +139,7 @@ function aninateChangePic(m_left, timeout){
     });
 }
 
-/* 设置定时变换图片 */
+/* 设置定时变换图片 * /
 var timer = "";
 function setTimer(){
     timer = setInterval("changePicTimer()", 4000);
