--- a/1yy/web/app/views/index.html
+++ b/1yy/web/app/views/index.html
@@ -27,46 +27,46 @@
 </section>
 <section class="channels">
   <div class="line">
-    <a class="item movie">
+    <a class="item movie" href="#">
       <div class="icon"></div>
       <div class="txt">电影</div>
     </a>
-    <a class="item tv">
+    <a class="item tv" href="#">
       <div class="icon"></div>
       <div class="txt">电视剧</div>
     </a>
-    <a class="item variety">
+    <a class="item variety" href="#">
       <div class="icon"></div>
       <div class="txt">综艺</div>
     </a>
-    <a class="item anime">
+    <a class="item anime" href="#">
       <div class="icon"></div>
       <div class="txt">动漫</div>
     </a>
   </div>
   <div class="line">
-    <a class="item game">
+    <a class="item game" href="#">
       <div class="icon"></div>
       <div class="txt">游戏</div>
     </a>
-    <a class="item ticket">
+    <a class="item ticket" href="#">
       <div class="icon"></div>
       <div class="txt">电影票</div>
     </a>
-    <a class="item documentary">
+    <a class="item documentary" href="#">
       <div class="icon"></div>
       <div class="txt">纪录片</div>
     </a>
-    <a class="item all">
+    <a class="item all" href="#">
       <div class="icon"></div>
       <div class="txt">全部</div>
     </a>
   </div>
 </section>
 <section class="mine">
-  <a href="#">播放历史</a>
-  <a href="#">我的离线</a>
-  <a href="#">我的收藏</a>
+  <a class="history" href="#">播放历史</a>
+  <a class="offline" href="#">我的离线</a>
+  <a class="favorite" href="#">我的收藏</a>
 </section>
 <script type="text/javascript">
   var slider = $('#slider').Slider();
