--- a/1yy/web/frontend/less/main.less
+++ b/1yy/web/frontend/less/main.less
@@ -135,46 +135,79 @@ header {
             .flex-1;
             width: 23%;
             margin: 4px;
+            padding: 2px 0;
             border-radius: 5px;
             display: block;
-            .icon{
-                width: 20px;
-                height: 20px;
-                margin: 4px auto 2px;
-                background: url(../img/quick_entry_all.png) no-repeat center;
-                background-size: auto 20px;
-            }
-            .txt{
-                font-size: 8px;
-                text-align: center;
-                margin-bottom: 4px;
-                color: #FFF;
-            }
+        }
+        .icon{
+            width: 24px;
+            height: 24px;
+            margin: 6px auto 2px;
+            background: url(../img/quick_entry_all.png) no-repeat center;
+            background-size: auto 24px;
+        }
+        .txt{
+            font-size: 12px;
+            text-align: center;
+            margin-bottom: 6px;
+            color: #FFF;
         }
 
         .movie{
             background: #f25e84;
+            .icon{
+                background: url(../img/quick_entry_film.png) no-repeat center;
+                background-size: auto 24px;
+            }
         }
         .tv{
             background: #b677dd;
+            .icon{
+                background: url(../img/quick_entry_tv_series.png) no-repeat center;
+                background-size: auto 24px;
+            }
         }
         .variety{
             background: #47b9e9;
+            .icon{
+                background: url(../img/quick_entry_variety.png) no-repeat center;
+                background-size: auto 24px;
+            }
         }
         .anime{
             background: #728be7;
+            .icon{
+                background: url(../img/quick_entry_anime.png) no-repeat center;
+                background-size: auto 24px;
+            }
         }
         .game{
             background: #35c977;
+            .icon{
+                background: url(../img/quick_entry_all.png) no-repeat center;
+                background-size: auto 24px;
+            }
         }
         .ticket{
             background: #e7b82b;
+            .icon{
+                background: url(../img/quick_entry_all.png) no-repeat center;
+                background-size: auto 24px;
+            }
         }
         .documentary{
             background: #f47a49;
+            .icon{
+                background: url(../img/quick_entry_all.png) no-repeat center;
+                background-size: auto 24px;
+            }
         }
         .all{
             background: #ed5656;
+            .icon{
+                background: url(../img/quick_entry_all.png) no-repeat center;
+                background-size: auto 24px;
+            }
         }
     }
 }
@@ -192,8 +225,20 @@ header {
         background-size: auto 20px;
         display: block;
         border-right: 1px solid #DFDFDF;
-        margin-right: 8px;
+        margin-right: 20px;
         .flex-1;
+    }
+    a.history {
+        background: url(../img/quick_entry_play_his.png) no-repeat left;
+        background-size: auto 20px;
+    }
+    a.offline {
+        background: url(../img/quick_entry_offline.png) no-repeat left;
+        background-size: auto 20px;
+    }
+    a.favorite {
+        background: url(../img/quick_entry_tv.png) no-repeat left;
+        background-size: auto 20px;
     }
     a:last-child {
         border: none;
