--- a/1yy/web/frontend/less/main.less
+++ b/1yy/web/frontend/less/main.less
@@ -225,7 +225,7 @@ header {
         background-size: auto 20px;
         display: block;
         border-right: 1px solid #DFDFDF;
-        margin-right: 20px;
+        margin-right: 6%;
         .flex-1;
     }
     a.history {
