--- a/1yy/web/public/css/main.src.css
+++ b/1yy/web/public/css/main.src.css
@@ -238,7 +238,7 @@ header .search {
   background-size: auto 20px;
   display: block;
   border-right: 1px solid #DFDFDF;
-  margin-right: 20px;
+  margin-right: 6%;
   -webkit-box-flex: 1;
   box-flex: 1;
   -ms-box-flex: 1;
