--- a/1yy/web/frontend/less/main.less
+++ b/1yy/web/frontend/less/main.less
@@ -2,8 +2,9 @@
     margin: 0;
     padding: 0
 }
+@background-body: #ECEBEB;
 body{
-    background: #ECEBEB;
+    background: @background-body;
 }
 textarea, input, a {
 -webkit-tap-highlight-color: rgba(0,0,0,0);
@@ -54,6 +55,7 @@ ul, ol {
 }
 
 @header-height: 46px;
+@link-highlight: #FF8C50;
 
 header {
     height: @header-height;
@@ -69,9 +71,9 @@ header {
     z-index: 300;
 
     a.active {
-        color: #FF8C50;
+        color: @link-highlight;
     }
-   .icon {
+    .icon {
         width: 25px;
         height: 100%;
         display: block;
@@ -80,7 +82,7 @@ header {
         background: url(../img/personal_icon_normal.png) no-repeat center;
         background-size: auto 24px;
     }
-    .channel{
+    nav{
         height: @header-height;
     }
     .search{
@@ -88,19 +90,20 @@ header {
         background-size: auto 24px;
     }
 }
-.index-head {
+header.index {
     line-height: @header-height;
 
-    .channel {
+    .wrap {
         .flex-1;
         margin: 0 15px;
         color: #666;
-        .wrap {
-            .box;
-            a {
-                display: block;
-                .flex-1;
-            }
+        
+    }
+    nav {
+        .box;
+        a {
+            display: block;
+            .flex-1;
         }
     }
 }
@@ -109,8 +112,8 @@ header {
 .slider{
     height: @slider-height;
     overflow: hidden;
-    margin: 5px;
-
+    margin: 5px 8px;
+    position: relative;
     .wrap{
         display:inline-block;
         white-space:nowrap;
@@ -126,9 +129,29 @@ header {
             }
         }
     }
+    .points {
+        position: absolute;
+        width: 100%;
+        bottom: 8px;
+        text-align: center;
+        span {
+            width: 10px;
+            height: 10px;
+            border-radius: 5px;
+            margin: 0 2px;
+            display: inline-block;
+            background: #666;
+            opacity: 0.8;
+            -moz-opacity: 0.8;
+            -webkit-opacity: 0.8;
+        }
+        span.active {
+            background: #FFF;
+        }
+    }
 }
-.channels {
-    margin: 5px 2px;
+nav.channels {
+    margin: 5px 4px;
     .line {
         .box;
         .item {
@@ -212,7 +235,7 @@ header {
     }
 }
 .mine {
-    margin: 5px;
+    margin: 8px;
     padding: 10px;
     border-radius: 5px;
     background: #FFF;
@@ -243,5 +266,87 @@ header {
     a:last-child {
         border: none;
         margin-right: 0;
+    }
+}
+.channel {
+    margin: 8px;
+    border: 1px solid #DDD;
+    border-radius: 5px;
+    background: #FFF;
+    nav {
+        .box;
+        background: @background-body;
+        a {
+            .flex-1;
+            height: 40px;
+            line-height: 40px;
+            display: block;
+            text-align: center;
+            border: 1px solid #DDD;
+            border-width: 0 1px 1px 0;
+            &.active {
+                height: 39px;
+                background: #FFF;
+                border-top: 2px solid @link-highlight;
+                color: @link-highlight;
+                border-bottom-width: 0;
+            }
+            &.active:first-child {
+                border-top-left-radius: 5px;
+            }
+            &:last-child {
+                border-right-width: 0;
+            }
+            &.active:last-child{
+                border-top-right-radius: 5px;
+            }
+        }
+    }
+    .items {
+        background: #FFF;
+        .item {
+            display: none;
+            padding: 6px;
+            a {
+                width: 50%;
+                float: left;
+                display: block;
+                .thumb {
+                    margin: 6px;
+                    position: relative;
+                    overflow: hidden;
+                    img {
+                        width: 100%;
+                        height: 100px;
+                    }
+                    .info {
+                        position: absolute;
+                        left: 8px;
+                        bottom: 4px;
+                        font-size: 14px;
+                        color: #FFF;
+                    }
+                }
+                .title {
+                    height: 2.4em;
+                    margin: 6px;
+                    line-height: 1.2em;
+                    font-size: 13px;
+                    overflow: hidden;
+                }
+            }
+        }
+        .item.active {
+            display: block;
+        }
+    }
+    .more {
+        display: block;
+        margin: 0 12px 12px;
+        padding: 10px;
+        font-size: 14px;
+        border-radius: 5px;
+        text-align: center;
+        border: 1px solid #CCC;
     }
 }
