--- a/1yy/web/frontend/less/main.less
+++ b/1yy/web/frontend/less/main.less
@@ -97,7 +97,7 @@ header.index {
         .flex-1;
         margin: 0 15px;
         color: #666;
-        
+
     }
     nav {
         .box;
@@ -117,10 +117,10 @@ header.index {
     .wrap{
         display:inline-block;
         white-space:nowrap;
-        height: @slider-height;
+        height: 100%;
         .item {
             display: inline-block;
-            height: @slider-height;
+            height: 100%;
             white-space: nowrap;
             img {
                 border-radius: 5px;
