--- a/1yy/web/app/views/index.html
+++ b/1yy/web/app/views/index.html
@@ -11,17 +11,11 @@
 </header>
 <section class="slider" id="slider">
   <div class="wrap">
-    <div class="item"><img alt="11" src="img/2.jpg"/></div>
-    <div class="item"><img alt="12" src="img/1.jpg"/></div>
-    <div class="item"><img alt="13" src="img/3.jpg"/></div>
-    <div class="item"><img alt="14" src="img/4.jpg"/></div>
+	{{range .Slides}}
+    <div class="item"><img alt="{{.Title}}" src="{{.Poster}}"/></div>
+	{{end}}
   </div>
-  <div class="points">
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-  </div>
+  <div class="points"></div>
 </section>
 <nav class="channels">
   <div class="line">
@@ -65,29 +59,29 @@
   <a class="history" href="/my-history">播放历史</a>
   <a class="favorite" href="/my-favorite">我的收藏</a>
 </section>
-{{range .channels}}
+{{range .Channels}}
 <section class="channel">
   <nav>
-    {{range $i, $channel := .data}}
-    <a href="#"{{if eq $i 0}} class="active"{{end}}>{{.title}}</a>
+    {{range $i, $group := .Groups}}
+    <a href="#"{{if eq $i 0}} class="active"{{end}}>{{.Title}}</a>
     {{end}}
   </nav>
   <div class="items">
-    {{range $i, $channel := .data}}
+    {{range $i, $group := .Groups}}
     <div class="item fix{{if eq $i 0}} active{{end}}">
-      {{range .videos}}
+      {{range .Items}}
       <a href="#">
         <div class="thumb">
-          <img src="{{.thumb}}"/>
-          <span class="info">{{.info}}</span>
+          <img src="{{.Poster}}"/>
+          <span class="info">{{.Hint}}</span>
         </div>
-        <div class="title">{{.title}}</div>
+        <div class="title">{{.Title}}</div>
       </a>
       {{end}}
     </div>
     {{end}}
   </div>
-  <a href="#" class="more">{{.more}}&nbsp;{{.total}}</a>
+  <a href="#" class="more">{{.Title}}</a>
 </section>
 {{end}}
 <script type="text/javascript">
@@ -102,5 +96,9 @@
       navSelector: 'nav',
       contentSelector: '.items',
     });
+  });
+
+  $(window).on("resize", function(){
+	slider.resize();
   });
 </script>
