--- a/1yy/web/app/views/layout.html
+++ b/1yy/web/app/views/layout.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type"  content="text/html; charset=utf-8" />
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, width=device-width" />
-    <title>{{.title}} - 1影院 手机版</title>
+    <title>{{.Title}} - 1影院 手机版</title>
 	<meta name="keywords" content="1影院,在线影院,免费电影" />
 	<meta name="description" content="1影院提供电影电视剧等视频在线免费观看服务，每日更新最新视频，与爱奇艺、搜狐等网站同步更新。" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
